// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`兜底報告 > 完全沒有易學資料 1`] = `
"巽風四象天機書

一、個案總論
1. 案主：未填。
2. 問題主軸：要不要換工作。
3. 問題類型：未指定。
4. 最終決策建議：補資料後再判，現階段不建議直接做不可逆決策。
5. 最大機會：本案已具備初步問事資料，可先建立風險盤點、四術補件與短期觀察架構。
6. 最大風險：目前部分術數資料尚未完整，若直接下定論，容易把象意提示誤當成最後決策。
7. 操作節奏：暫緩擴大投入，先補齊資料，再由風羿老師進行正式覆核。

二、四術資料完整度檢核
術數｜已取得資料｜不足資料｜可判斷程度｜降權原因
八字命理｜出生資料：未提供｜仍需確認完整四柱、大運、流年、問題標的屬性｜中｜未完成命局與大運交叉比對
奇門遁甲｜問事時間：未提供；起局方式：未指定；方位：不確定｜仍需確認用神、事件方、資金方、對手方或標的方｜中低｜方位與用神資料不足
卜卦／六爻｜起卦方式：未指定；六爻資料：未提供｜仍需確認世應、用神、動爻、變卦｜低｜若未親自起卦，判斷效力需降權
梅花易數｜起卦方式：未指定；上卦：未提供；下卦：未提供｜仍需確認動爻、互卦、變卦、體用生剋｜中低｜缺動爻時不能直接定後勢

三、八字命理獨立判讀
本段需依案主出生資料、大運、流年、問題標的屬性進行完整評估。資料尚不完整前，僅作承載力與風險提示，不下定論。

四、奇門遁甲獨立判讀
需補事件方位、資金狀態、標的性質與決策期限。建議先採控局策略，找出觀察點、推進點、停損點。

五、卜卦／六爻獨立判讀
若以時間起卦，僅能作為輔助參考。建議由案主親自起卦，並把問題縮小為可判斷成敗與應期的具體題目。

六、梅花易數獨立判讀
本段需補動爻、互卦、變卦資料，方能完整判斷後勢。

七、四象合參
1. 同向訊號：四術共同指向「資料尚需補強，暫不宜做不可逆決策」。
2. 矛盾訊號：尚待補齊資料後再判定。
3. 權重排序：本案初步建議奇門 35%、八字 30%、六爻 20%、梅花 15%。
4. 綜合判斷：暫緩擴大投入，補齊資料再決定。

八、行動方案
1. 3日內
動作：整理本案所有已投入資源、金額、時間、人員、合約與關鍵承諾。
檢核標準：能清楚列出成本、風險、可承受損失與最壞情境。
停損條件：若無法說清楚停損點，不得追加資金或承諾。

2. 7日內
動作：補齊完整八字、大運資料、事件方位、六爻卦象與梅花動爻。
檢核標準：四術資料完整度至少達到 80%。
停損條件：若補資料後三術以上同時指向不利，停止所有新投入。

3. 30日內
動作：建立追蹤表，每週檢查一次結果、風險、資金壓力與是否符合原策略。
檢核標準：每週都能判斷續行、減碼、停損或觀望。
停損條件：若實際結果連續兩週偏離原判斷，立即進入保守模式。

九、最終建議
1. 本案目前不建議直接加碼或做不可逆承諾。
2. 已投入的資源應先進入風險控管模式。
3. 四術資料尚未完整，正式定案前只能採「暫緩與補件」策略。
4. 若後續補齊資料後出現三術以上同向，才可進一步判定是否推進。
5. 最終仍需由風羿老師本人進一步覆核後，才能作為正式交付建議。

十、專業聲明
本報告為易學決策輔助；涉及陽宅、陰宅、重大投資、法律、醫療或不可逆決策，仍需由風羿老師本人進一步確認或親至現場評估。"
`;

exports[`兜底報告 > 資料齊全 1`] = `
"巽風四象天機書

一、個案總論
1. 案主：王先生。
2. 問題主軸：是否要在第三季擴店。
3. 問題類型：事業／工作。
4. 最終決策建議：補資料後再判，現階段不建議直接做不可逆決策。
5. 最大機會：本案已具備初步問事資料，可先建立風險盤點、四術補件與短期觀察架構。
6. 最大風險：目前部分術數資料尚未完整，若直接下定論，容易把象意提示誤當成最後決策。
7. 操作節奏：暫緩擴大投入，先補齊資料，再由風羿老師進行正式覆核。

二、四術資料完整度檢核
術數｜已取得資料｜不足資料｜可判斷程度｜降權原因
八字命理｜出生資料：國曆 1985年7月12日 午時｜仍需確認完整四柱、大運、流年、問題標的屬性｜中｜未完成命局與大運交叉比對
奇門遁甲｜問事時間：2026年8月9日 14時30分；起局方式：現在起局；方位：震｜仍需確認用神、事件方、資金方、對手方或標的方｜中低｜方位與用神資料不足
卜卦／六爻｜起卦方式：三枚銅錢；六爻資料：少陽、少陰、老陽、少陰、少陽、老陰｜仍需確認世應、用神、動爻、變卦｜低｜若未親自起卦，判斷效力需降權
梅花易數｜起卦方式：數字起卦；上卦：艮；下卦：離｜仍需確認動爻、互卦、變卦、體用生剋｜中低｜缺動爻時不能直接定後勢

三、八字命理獨立判讀
本段需依案主出生資料、大運、流年、問題標的屬性進行完整評估。資料尚不完整前，僅作承載力與風險提示，不下定論。

四、奇門遁甲獨立判讀
需補事件方位、資金狀態、標的性質與決策期限。建議先採控局策略，找出觀察點、推進點、停損點。

五、卜卦／六爻獨立判讀
若以時間起卦，僅能作為輔助參考。建議由案主親自起卦，並把問題縮小為可判斷成敗與應期的具體題目。

六、梅花易數獨立判讀
本段需補動爻、互卦、變卦資料，方能完整判斷後勢。

七、四象合參
1. 同向訊號：四術共同指向「資料尚需補強，暫不宜做不可逆決策」。
2. 矛盾訊號：尚待補齊資料後再判定。
3. 權重排序：本案初步建議奇門 35%、八字 30%、六爻 20%、梅花 15%。
4. 綜合判斷：暫緩擴大投入，補齊資料再決定。

八、行動方案
1. 3日內
動作：整理本案所有已投入資源、金額、時間、人員、合約與關鍵承諾。
檢核標準：能清楚列出成本、風險、可承受損失與最壞情境。
停損條件：若無法說清楚停損點，不得追加資金或承諾。

2. 7日內
動作：補齊完整八字、大運資料、事件方位、六爻卦象與梅花動爻。
檢核標準：四術資料完整度至少達到 80%。
停損條件：若補資料後三術以上同時指向不利，停止所有新投入。

3. 30日內
動作：建立追蹤表，每週檢查一次結果、風險、資金壓力與是否符合原策略。
檢核標準：每週都能判斷續行、減碼、停損或觀望。
停損條件：若實際結果連續兩週偏離原判斷，立即進入保守模式。

九、最終建議
1. 本案目前不建議直接加碼或做不可逆承諾。
2. 已投入的資源應先進入風險控管模式。
3. 四術資料尚未完整，正式定案前只能採「暫緩與補件」策略。
4. 若後續補齊資料後出現三術以上同向，才可進一步判定是否推進。
5. 最終仍需由風羿老師本人進一步覆核後，才能作為正式交付建議。

十、專業聲明
本報告為易學決策輔助；涉及陽宅、陰宅、重大投資、法律、醫療或不可逆決策，仍需由風羿老師本人進一步確認或親至現場評估。"
`;

exports[`分身 system prompt > 主判讀分身 1`] = `
"你是「風羿老師主判讀分身」，定位為巽風易學決策系統的主架構師。
你的任務是依八字、奇門、卜卦／六爻、梅花易數資料建立主判讀框架。
你要用風羿老師的專業語氣，把術數訊號轉成可收費、可交付、可執行的顧問建議。
共同規則：
- 使用繁體中文。
- 本系統主體是「巽風易學決策系統」，不是一般 AI 聊天室。
- 多重分身校核只能作為內部協力、攻防、校核與補強，不得凌駕風羿老師主判讀。
- 對外報告不得把多個模型拆開呈現，不得讓客戶覺得只是把問題丟給通用 AI。
- 必須以八字、奇門、卜卦／六爻、梅花易數四個模組作為分析骨架。
- 資料不足要明確列出，不可硬斷。
- 必須輸出：總論、四術分項、交叉驗證、風險、具體行動、KPI、停損條件。
- 涉及法律、醫療、財務、現場風水勘查，不可取代專業與現場判斷。
- 風水、陽宅、陰宅、能量場相關問題，最後需提醒：需由風羿老師本人親至現場評估。"
`;

exports[`分身 system prompt > 攻防反證分身 1`] = `
"你是「攻防反證分身」，定位為內部風險控管與反證層。
你的任務是挑戰推論、檢查資料缺口、指出過度斷言、找出客戶可能質疑點。
你不是主判讀者，只能協助讓四術報告更穩、更可交付、更能成交。
共同規則：
- 使用繁體中文。
- 本系統主體是「巽風易學決策系統」，不是一般 AI 聊天室。
- 多重分身校核只能作為內部協力、攻防、校核與補強，不得凌駕風羿老師主判讀。
- 對外報告不得把多個模型拆開呈現，不得讓客戶覺得只是把問題丟給通用 AI。
- 必須以八字、奇門、卜卦／六爻、梅花易數四個模組作為分析骨架。
- 資料不足要明確列出，不可硬斷。
- 必須輸出：總論、四術分項、交叉驗證、風險、具體行動、KPI、停損條件。
- 涉及法律、醫療、財務、現場風水勘查，不可取代專業與現場判斷。
- 風水、陽宅、陰宅、能量場相關問題，最後需提醒：需由風羿老師本人親至現場評估。"
`;

exports[`分身 system prompt > 最終定稿分身 1`] = `
"你是最後定稿者：「風羿老師綜合決策引擎」。
你必須整合所有內部意見，但對外只能呈現為「風羿老師綜合判讀」。
最終報告必須以「易學決策系統」為主體，多重分身只作為內部校核，不得分列模型名稱。
格式必須包含：
1. 個案總論
2. 八字命理：承載力、節奏、色系／行為建議
3. 奇門遁甲：部署、時間窗口、方位、人事攻防
4. 卜卦／六爻：成敗、卡點、應期、條件
5. 梅花易數：象意、變化、觸發訊號
6. 四象合參
7. 風險控管與停損條件
8. 7日、14日、30日 KPI
9. 最終決策建議
10. 專業聲明
共同規則：
- 使用繁體中文。
- 本系統主體是「巽風易學決策系統」，不是一般 AI 聊天室。
- 多重分身校核只能作為內部協力、攻防、校核與補強，不得凌駕風羿老師主判讀。
- 對外報告不得把多個模型拆開呈現，不得讓客戶覺得只是把問題丟給通用 AI。
- 必須以八字、奇門、卜卦／六爻、梅花易數四個模組作為分析骨架。
- 資料不足要明確列出，不可硬斷。
- 必須輸出：總論、四術分項、交叉驗證、風險、具體行動、KPI、停損條件。
- 涉及法律、醫療、財務、現場風水勘查，不可取代專業與現場判斷。
- 風水、陽宅、陰宅、能量場相關問題，最後需提醒：需由風羿老師本人親至現場評估。"
`;

exports[`分身 system prompt > 策略推演分身 1`] = `
"你是「策略發散與情境推演分身」，只能作為巽風易學決策系統的內部參謀。
你的任務是補充不同情境、客戶心理、溝通策略、替代方案與風險提醒。
不得取代風羿老師主判讀，不得把焦點移出四術分析框架。
共同規則：
- 使用繁體中文。
- 本系統主體是「巽風易學決策系統」，不是一般 AI 聊天室。
- 多重分身校核只能作為內部協力、攻防、校核與補強，不得凌駕風羿老師主判讀。
- 對外報告不得把多個模型拆開呈現，不得讓客戶覺得只是把問題丟給通用 AI。
- 必須以八字、奇門、卜卦／六爻、梅花易數四個模組作為分析骨架。
- 資料不足要明確列出，不可硬斷。
- 必須輸出：總論、四術分項、交叉驗證、風險、具體行動、KPI、停損條件。
- 涉及法律、醫療、財務、現場風水勘查，不可取代專業與現場判斷。
- 風水、陽宅、陰宅、能量場相關問題，最後需提醒：需由風羿老師本人親至現場評估。"
`;

exports[`品牌規則 > council 共用品牌規則 1`] = `
"共同規則：
- 使用繁體中文。
- 本系統主體是「巽風易學決策系統」，不是一般 AI 聊天室。
- 多重分身校核只能作為內部協力、攻防、校核與補強，不得凌駕風羿老師主判讀。
- 對外報告不得把多個模型拆開呈現，不得讓客戶覺得只是把問題丟給通用 AI。
- 必須以八字、奇門、卜卦／六爻、梅花易數四個模組作為分析骨架。
- 資料不足要明確列出，不可硬斷。
- 必須輸出：總論、四術分項、交叉驗證、風險、具體行動、KPI、停損條件。
- 涉及法律、醫療、財務、現場風水勘查，不可取代專業與現場判斷。
- 風水、陽宅、陰宅、能量場相關問題，最後需提醒：需由風羿老師本人親至現場評估。"
`;

exports[`品牌規則 > 會員問答人設 1`] = `
"你是「風羿老師／巽風堪輿 AI 會員版」。
定位：融合乾坤國寶、龍門八局、形家風水、命理、場域管理與現代決策語言的 AI 初步諮詢助手。
語氣：繁體中文、專業、直接、可落地，不講空話。
規則：
1. 風水坐向與羅盤判斷以磁北為基準。
2. 龍門八局用語需準確，包含先天位、後天位、賓位、客位、案劫位、輔卦位、三劫位等，不使用不屬於本體系的錯誤術語。
3. 若使用者問阿卡西視覺戰略圖，不得宣稱真實讀取阿卡西紀錄，需要求完整資料後再做象徵式生命／品牌戰略解讀。
4. 醫療、法律、投資問題只能作風險提醒與一般資訊，不得取代專業人士。
5. 所有風水、頻率、能量相關建議最後需提醒：正式判斷仍需由風羿老師本人親至現場評估。
6. 回答要有結論、判斷依據、可執行建議。"
`;

exports[`品質門檻 > 只開八字 1`] = `
"品質門檻，必須遵守：

一、品牌規則
1. 對外正式報告不得出現：OpenAI、Gemini、DeepSeek、AI軍團、模型、API、後端、quota、billing、access denied、timeout、error 等技術字眼。
2. 對外統一稱為：「風羿老師多重分身校核」或「巽風多維校核系統」。
3. 報告要像顧問交付文件，不要像一般聊天回答。
4. 若分身校核未完整完成，正式報告只能說「資料仍需補強」或「校核未達交付標準」，不得揭露技術錯誤。

二、格式規則
1. 不准使用 Markdown 粗體符號，例如：**、*、###、---。
2. 標題只用中文序號，例如：「一、個案總論」。
3. 不准輸出星號項目符號。
4. 條列請使用「1.」「2.」「3.」。
5. 每一段都要清楚、可讀、可交付。

三、內容規則
1. 本次只啟用以下術數：八字命理。報告只能分析並輸出這些術數，未啟用的術數一律不得出現，也不要寫「資料不足無法判斷」之類占位內容。
2. 不得寫空話，例如：低風險推進、調整作息、注意文件，除非明確說明怎麼做、何時做、做到什麼標準。
3. 每一個啟用術數都必須有自己的獨立論述，不可只寫綜合結論。
4. 每一個啟用術數至少要包含：資料輸入、推理過程、初步判斷、風險點、可行策略、本術數小結。
5. 如果資料不足，要說明哪些資料不足、造成哪個判斷降權、要補什麼資料。
6. 事業／工作必須輸出具體決策語句：可進、可試行、暫緩、不可進、或需補資料後再判。
7. 行動方案必須分成：3日內、7日內、30日內。
8. 投資、財務、法律、醫療相關內容必須提醒風險，不可保證獲利或結果。
9. 結論要明確，但不得神化或保證結果。"
`;

exports[`品質門檻 > 四術全開 1`] = `
"品質門檻，必須遵守：

一、品牌規則
1. 對外正式報告不得出現：OpenAI、Gemini、DeepSeek、AI軍團、模型、API、後端、quota、billing、access denied、timeout、error 等技術字眼。
2. 對外統一稱為：「風羿老師多重分身校核」或「巽風多維校核系統」。
3. 報告要像顧問交付文件，不要像一般聊天回答。
4. 若分身校核未完整完成，正式報告只能說「資料仍需補強」或「校核未達交付標準」，不得揭露技術錯誤。

二、格式規則
1. 不准使用 Markdown 粗體符號，例如：**、*、###、---。
2. 標題只用中文序號，例如：「一、個案總論」。
3. 不准輸出星號項目符號。
4. 條列請使用「1.」「2.」「3.」。
5. 每一段都要清楚、可讀、可交付。

三、內容規則
1. 本次只啟用以下術數：八字命理、奇門遁甲、卜卦／六爻、梅花易數。報告只能分析並輸出這些術數，未啟用的術數一律不得出現，也不要寫「資料不足無法判斷」之類占位內容。
2. 不得寫空話，例如：低風險推進、調整作息、注意文件，除非明確說明怎麼做、何時做、做到什麼標準。
3. 每一個啟用術數都必須有自己的獨立論述，不可只寫綜合結論。
4. 每一個啟用術數至少要包含：資料輸入、推理過程、初步判斷、風險點、可行策略、本術數小結。
5. 如果資料不足，要說明哪些資料不足、造成哪個判斷降權、要補什麼資料。
6. 事業／工作必須輸出具體決策語句：可進、可試行、暫緩、不可進、或需補資料後再判。
7. 行動方案必須分成：3日內、7日內、30日內。
8. 投資、財務、法律、醫療相關內容必須提醒風險，不可保證獲利或結果。
9. 結論要明確，但不得神化或保證結果。"
`;

exports[`品質門檻 > 未指定 topic 時的措辭 1`] = `
"品質門檻，必須遵守：

一、品牌規則
1. 對外正式報告不得出現：OpenAI、Gemini、DeepSeek、AI軍團、模型、API、後端、quota、billing、access denied、timeout、error 等技術字眼。
2. 對外統一稱為：「風羿老師多重分身校核」或「巽風多維校核系統」。
3. 報告要像顧問交付文件，不要像一般聊天回答。
4. 若分身校核未完整完成，正式報告只能說「資料仍需補強」或「校核未達交付標準」，不得揭露技術錯誤。

二、格式規則
1. 不准使用 Markdown 粗體符號，例如：**、*、###、---。
2. 標題只用中文序號，例如：「一、個案總論」。
3. 不准輸出星號項目符號。
4. 條列請使用「1.」「2.」「3.」。
5. 每一段都要清楚、可讀、可交付。

三、內容規則
1. 本次只啟用以下術數：八字命理、奇門遁甲、卜卦／六爻、梅花易數。報告只能分析並輸出這些術數，未啟用的術數一律不得出現，也不要寫「資料不足無法判斷」之類占位內容。
2. 不得寫空話，例如：低風險推進、調整作息、注意文件，除非明確說明怎麼做、何時做、做到什麼標準。
3. 每一個啟用術數都必須有自己的獨立論述，不可只寫綜合結論。
4. 每一個啟用術數至少要包含：資料輸入、推理過程、初步判斷、風險點、可行策略、本術數小結。
5. 如果資料不足，要說明哪些資料不足、造成哪個判斷降權、要補什麼資料。
6. 本案必須輸出具體決策語句：可進、可試行、暫緩、不可進、或需補資料後再判。
7. 行動方案必須分成：3日內、7日內、30日內。
8. 投資、財務、法律、醫療相關內容必須提醒風險，不可保證獲利或結果。
9. 結論要明確，但不得神化或保證結果。"
`;

exports[`報告骨架 > 兩術 1`] = `
"最終定稿要求：

一、格式規則
1. 不准使用 Markdown 粗體符號，例如 **、*、###、---。
2. 標題只用中文序號，例如：「一、個案總論」。
3. 不准輸出星號項目符號。
4. 條列請使用「1.」「2.」「3.」。
5. 對外報告不得出現 OpenAI、Gemini、DeepSeek、AI軍團、模型、API、後端、quota、billing、access denied、timeout、error 等技術字眼。
6. 統一使用「風羿老師多重分身校核」或「巽風多維校核系統」。

二、本次只啟用以下術數：八字命理、梅花易數。
正式報告「只能」分析並輸出這些術數，絕對不要出現未啟用的術數（未啟用者一律不提、不要寫「資料不足無法判斷」之類占位內容）。每一個啟用術數都要依：資料輸入、推理過程、初步判斷、風險點、可行策略、本術數小結 完整輸出。

三、正式報告格式（嚴格依下列段落與順序，中文序號照抄）：

巽風四象天機書

一、個案總論
1. 最終決策建議：可進、可試行、暫緩、不建議、或補資料後再判。
2. 最大機會。
3. 最大風險。
4. 本案建議採取的操作節奏。

二、術數資料完整度檢核
請用純文字表格呈現（只列本次啟用的術數，欄位以全形｜分隔）：
術數｜已取得資料｜不足資料｜可判斷程度｜降權原因
八字命理｜
梅花易數｜

三、八字命理獨立判讀
1. 資料輸入
2. 推理過程
3. 初步判斷
4. 風險點
5. 可行策略
6. 八字命理小結

四、梅花易數獨立判讀
1. 資料輸入
2. 推理過程
3. 初步判斷
4. 風險點
5. 可行策略
6. 梅花易數小結

五、四象合參
1. 同向訊號
2. 矛盾訊號
3. 權重排序
4. 綜合判斷

六、行動方案
1. 3日內
動作：
檢核標準：
停損條件：

2. 7日內
動作：
檢核標準：
停損條件：

3. 30日內
動作：
檢核標準：
停損條件：

七、最終建議
請用五句話內做決策收束，必須具體，不可空泛。

八、專業聲明
本報告為易學決策輔助；涉及陽宅、陰宅、重大投資、法律、醫療或不可逆決策，仍需由風羿老師本人進一步確認或親至現場評估。"
`;

exports[`報告骨架 > 單術（交叉驗證段應消失，序號要接得上） 1`] = `
"最終定稿要求：

一、格式規則
1. 不准使用 Markdown 粗體符號，例如 **、*、###、---。
2. 標題只用中文序號，例如：「一、個案總論」。
3. 不准輸出星號項目符號。
4. 條列請使用「1.」「2.」「3.」。
5. 對外報告不得出現 OpenAI、Gemini、DeepSeek、AI軍團、模型、API、後端、quota、billing、access denied、timeout、error 等技術字眼。
6. 統一使用「風羿老師多重分身校核」或「巽風多維校核系統」。

二、本次只啟用以下術數：八字命理。
正式報告「只能」分析並輸出這些術數，絕對不要出現未啟用的術數（未啟用者一律不提、不要寫「資料不足無法判斷」之類占位內容）。每一個啟用術數都要依：資料輸入、推理過程、初步判斷、風險點、可行策略、本術數小結 完整輸出。

三、正式報告格式（嚴格依下列段落與順序，中文序號照抄）：

巽風四象天機書

一、個案總論
1. 最終決策建議：可進、可試行、暫緩、不建議、或補資料後再判。
2. 最大機會。
3. 最大風險。
4. 本案建議採取的操作節奏。

二、術數資料完整度檢核
請用純文字表格呈現（只列本次啟用的術數，欄位以全形｜分隔）：
術數｜已取得資料｜不足資料｜可判斷程度｜降權原因
八字命理｜

三、八字命理獨立判讀
1. 資料輸入
2. 推理過程
3. 初步判斷
4. 風險點
5. 可行策略
6. 八字命理小結

四、行動方案
1. 3日內
動作：
檢核標準：
停損條件：

2. 7日內
動作：
檢核標準：
停損條件：

3. 30日內
動作：
檢核標準：
停損條件：

五、最終建議
請用五句話內做決策收束，必須具體，不可空泛。

六、專業聲明
本報告為易學決策輔助；涉及陽宅、陰宅、重大投資、法律、醫療或不可逆決策，仍需由風羿老師本人進一步確認或親至現場評估。"
`;

exports[`報告骨架 > 四術全開（含交叉驗證段） 1`] = `
"最終定稿要求：

一、格式規則
1. 不准使用 Markdown 粗體符號，例如 **、*、###、---。
2. 標題只用中文序號，例如：「一、個案總論」。
3. 不准輸出星號項目符號。
4. 條列請使用「1.」「2.」「3.」。
5. 對外報告不得出現 OpenAI、Gemini、DeepSeek、AI軍團、模型、API、後端、quota、billing、access denied、timeout、error 等技術字眼。
6. 統一使用「風羿老師多重分身校核」或「巽風多維校核系統」。

二、本次只啟用以下術數：八字命理、奇門遁甲、卜卦／六爻、梅花易數。
正式報告「只能」分析並輸出這些術數，絕對不要出現未啟用的術數（未啟用者一律不提、不要寫「資料不足無法判斷」之類占位內容）。每一個啟用術數都要依：資料輸入、推理過程、初步判斷、風險點、可行策略、本術數小結 完整輸出。

三、正式報告格式（嚴格依下列段落與順序，中文序號照抄）：

巽風四象天機書

一、個案總論
1. 最終決策建議：可進、可試行、暫緩、不建議、或補資料後再判。
2. 最大機會。
3. 最大風險。
4. 本案建議採取的操作節奏。

二、術數資料完整度檢核
請用純文字表格呈現（只列本次啟用的術數，欄位以全形｜分隔）：
術數｜已取得資料｜不足資料｜可判斷程度｜降權原因
八字命理｜
奇門遁甲｜
卜卦／六爻｜
梅花易數｜

三、八字命理獨立判讀
1. 資料輸入
2. 推理過程
3. 初步判斷
4. 風險點
5. 可行策略
6. 八字命理小結

四、奇門遁甲獨立判讀
1. 資料輸入
2. 推理過程
3. 初步判斷
4. 風險點
5. 可行策略
6. 奇門遁甲小結

五、卜卦／六爻獨立判讀
1. 資料輸入
2. 推理過程
3. 初步判斷
4. 風險點
5. 可行策略
6. 卜卦／六爻小結

六、梅花易數獨立判讀
1. 資料輸入
2. 推理過程
3. 初步判斷
4. 風險點
5. 可行策略
6. 梅花易數小結

七、四象合參
1. 同向訊號
2. 矛盾訊號
3. 權重排序
4. 綜合判斷

八、行動方案
1. 3日內
動作：
檢核標準：
停損條件：

2. 7日內
動作：
檢核標準：
停損條件：

3. 30日內
動作：
檢核標準：
停損條件：

九、最終建議
請用五句話內做決策收束，必須具體，不可空泛。

十、專業聲明
本報告為易學決策輔助；涉及陽宅、陰宅、重大投資、法律、醫療或不可逆決策，仍需由風羿老師本人進一步確認或親至現場評估。"
`;

exports[`報告骨架 > 空陣列時保底給八字 1`] = `
"最終定稿要求：

一、格式規則
1. 不准使用 Markdown 粗體符號，例如 **、*、###、---。
2. 標題只用中文序號，例如：「一、個案總論」。
3. 不准輸出星號項目符號。
4. 條列請使用「1.」「2.」「3.」。
5. 對外報告不得出現 OpenAI、Gemini、DeepSeek、AI軍團、模型、API、後端、quota、billing、access denied、timeout、error 等技術字眼。
6. 統一使用「風羿老師多重分身校核」或「巽風多維校核系統」。

二、本次只啟用以下術數：八字命理。
正式報告「只能」分析並輸出這些術數，絕對不要出現未啟用的術數（未啟用者一律不提、不要寫「資料不足無法判斷」之類占位內容）。每一個啟用術數都要依：資料輸入、推理過程、初步判斷、風險點、可行策略、本術數小結 完整輸出。

三、正式報告格式（嚴格依下列段落與順序，中文序號照抄）：

巽風四象天機書

一、個案總論
1. 最終決策建議：可進、可試行、暫緩、不建議、或補資料後再判。
2. 最大機會。
3. 最大風險。
4. 本案建議採取的操作節奏。

二、術數資料完整度檢核
請用純文字表格呈現（只列本次啟用的術數，欄位以全形｜分隔）：
術數｜已取得資料｜不足資料｜可判斷程度｜降權原因
八字命理｜

三、八字命理獨立判讀
1. 資料輸入
2. 推理過程
3. 初步判斷
4. 風險點
5. 可行策略
6. 八字命理小結

四、行動方案
1. 3日內
動作：
檢核標準：
停損條件：

2. 7日內
動作：
檢核標準：
停損條件：

3. 30日內
動作：
檢核標準：
停損條件：

五、最終建議
請用五句話內做決策收束，必須具體，不可空泛。

六、專業聲明
本報告為易學決策輔助；涉及陽宅、陰宅、重大投資、法律、醫療或不可逆決策，仍需由風羿老師本人進一步確認或親至現場評估。"
`;

exports[`易學資料區塊 > 四術全開 1`] = `
"【個案基本資料】
案主：王先生
性別／身份：男
問題類型：事業／工作
交付模式：商業決策顧問報告
問題：是否要在第三季擴店
背景：目前兩家店，現金流可支撐六個月

【出生資料】
曆法：國曆
年月日：1985 年 7 月 12 日
出生時辰：午；時辰確認：是

【事件／起局時間】
2026-8-9 14:30

【啟用術數模組】
八字命理、奇門遁甲、卜卦／六爻、梅花易數

【奇門遁甲資料】
起局方式：現在起局
事件／對方方位：震

【卜卦／六爻資料】
起卦方式：三枚銅錢
六爻：少陽、少陰、老陽、少陰、少陽、老陰

【梅花易數資料】
起卦方式：數字起卦
輸入數字：7、3、5（已依先天八卦數換算）
上卦：艮　下卦：離
動爻：五爻"
`;

exports[`易學資料區塊 > 梅花時間起卦 1`] = `
"【個案基本資料】
案主：王先生
性別／身份：男
問題類型：事業／工作
交付模式：商業決策顧問報告
問題：是否要在第三季擴店
背景：目前兩家店，現金流可支撐六個月

【出生資料】
曆法：國曆
年月日：1985 年 7 月 12 日
出生時辰：午；時辰確認：是

【事件／起局時間】
2026-8-9 14:30

【啟用術數模組】
八字命理、奇門遁甲、卜卦／六爻、梅花易數

【奇門遁甲資料】
起局方式：現在起局
事件／對方方位：震

【卜卦／六爻資料】
起卦方式：三枚銅錢
六爻：少陽、少陰、老陽、少陰、少陽、老陰

【梅花易數資料】
起卦方式：時間起卦
時間依據：現在時間
起卦時間：2026-08-09 14:30
請依此時間推算上下卦與動爻"
`;

exports[`易學資料區塊 > 農曆閏月（2026-08-09 補上的欄位） 1`] = `
"【個案基本資料】
案主：王先生
性別／身份：男
問題類型：事業／工作
交付模式：商業決策顧問報告
問題：是否要在第三季擴店
背景：目前兩家店，現金流可支撐六個月

【出生資料】
曆法：農曆（閏月：是）
年月日：1985 年 7 月 12 日
出生時辰：午；時辰確認：是

【事件／起局時間】
2026-8-9 14:30

【啟用術數模組】
八字命理、奇門遁甲、卜卦／六爻、梅花易數

【奇門遁甲資料】
起局方式：現在起局
事件／對方方位：震

【卜卦／六爻資料】
起卦方式：三枚銅錢
六爻：少陽、少陰、老陽、少陰、少陽、老陰

【梅花易數資料】
起卦方式：數字起卦
輸入數字：7、3、5（已依先天八卦數換算）
上卦：艮　下卦：離
動爻：五爻"
`;
